fix: gap in section how

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,7 +339,13 @@
   grid-template-columns: 1fr 2fr;
   margin-top: 80px;
   padding: 0 20px;
-  gap: 20px;
+  gap: 10px;
+}
+
+@media (width < 1024px) {
+  .section-how {
+    gap: 20px;
+  }
 }
 
 .section-how__title {
